<resources>
    <string name="app_name">맘아이 스마트(태블릿)</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="question">문의하기</string>
    <string name="next">다음</string>
    <string name="previous">이전</string>
    <string name="search">검색</string>
    <string name="bullet">\u00b7</string>
    <string name="service_is_running">서비스 구동중</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="splash_app_name">맘아이 스마트(태블릿)</string>
    <string name="copy_rights">CopyRight(c) 2005~2022 JNESS Inc. All Rights Reserved.</string>
    <string name="block_content">제한된 콘텐츠입니다.</string>
    <string name="content_blocked">제한 콘텐츠</string>
    <string name="will_dismiss">%d 초 후 해제됩니다.</string>
    <string name="data_will_be_used">데이터 네트워크를 사용할 경우 가입하신 요금제에 따라 요금이 부과될 수 있습니다.</string>
    <string name="need_all_permission">\'맘아이 스마트\'의 기능을 이용하기 위해서는 모든 권한을 허용 해주셔야 합니다. 설정화면으로 이동합니다.</string>
    <string name="disabled_admin_permission">\'맘아이 스마트\'의 기기 관리자 기능이 해제되었습니다.</string>
    <string name="enabled_admin_permission">\'맘아이 스마트\'의 기기 관리자 기능이 설정되었습니다.</string>
    <string name="device_admin_permission_desc">기기 관리자 권한이 필요합니다. 다음화면에서 실행버튼을 클릭하세요.</string>
    <string name="accessibility_permission_desc">접근성 설정이 필요합니다.\n다음화면에서 \'설치된 서비스\' -> \'맘아이 스마트\'를 선택하신 후 \'사용중\' 상태로 변경을 해주세요. \n\n이미 접근성 설정이 되어 있는 경우에도 이 알림이 계속 표시되는 경우, 접근성 해제 후 다시 설정해주세요.</string>
    <string name="usage_access_permission_desc">사용정보 접근 허용을 해주셔야 합니다.\n다음화면에서 \'맘아이 스마트\'를 선택하신 후 \'사용 추척 허용\' 상태로 변경을 해주세요.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_current_message_1">지금은 자유 사용 시간입니다.\n유해 콘텐츠는 상시 차단됩니다.</string>
    <string name="main_current_message_2">지금은 수업 시간입니다.\n허용된 앱만 실행할 수 있습니다.</string>
    <string name="main_current_message_3">지금은 심야 시간입니다.\n허용된 앱만 실행할 수 있습니다.</string>
    <string name="protected_app_setting">앱 설정을 변경할 수 없습니다.</string>
    <string name="main_01">버전: v%s,</string>
    <string name="main_02">일련번호:%d</string>
    <string name="main_03">설정 시간</string>
    <string name="main_04">수업시간</string>
    <string name="main_05">심야시간</string>
    <string name="main_06">22:00 ~ 06:00</string>
    <string name="main_07">허용된 앱</string>
    <string name="main_08">더보기</string>
    <string name="main_09">차단 기록</string>
    <string name="main_10">회 차단되었습니다.</string>
    <string name="main_11">상세 기록 보기</string>
    <string name="main_12">CopyRight(c) 2005~2022 JNESS Inc. All Rights Reserved.</string>
    <string name="update_rule">정책정보가 업데이트 되었습니다.</string>
    <string name="buy_license">라이선스 구매하기 &gt;</string>
    <string name="insert_license">라이선스 정보 입력</string>
    <string name="plz_insert_license">라이선스를 입력해 주세요.</string>
    <string name="confirm">확인</string>
    <string name="authorize">인증</string>
    <string name="cancel">취소</string>
    <string name="invalid_license">라이선스 정보가 일치하지 않습니다.</string>
    <string name="registered">라이선스 정보가 인증되었습니다.</string>
    <string name="already_used">이미 사용된 라이선스입니다.</string>
    <string name="no_agency">학교정보 또는 기관 정보를 입력해주세요.</string>
    <string name="insert_email">이메일 정보를 입력하세요.</string>
    <string name="insert_phone">전화번호를 입력하세요.</string>
    <string name="use_license_another_device">라이선스가 다른 기기에서 사용되어, 사용중지 되었습니다.</string>
    <string name="start_trial">체험판 시작하기</string>
    <string name="trial_version">체험판 사용하기</string>
    <string name="trial_description">1. 체험판의 사용기간은 7일입니다.\n2. 체험판은 일부 차단 기능만 제공하며, 차단 항목(정책)을 설정할 수 없습니다.\n\t\t\t\t* 유료라이선스 전환 시 차단 항목 설정 가능\n3. 체험판 사용을 중지하실 경우는 [ 체험판 종료 ] 버튼을 클릭하세요.\n\t\t\t\t* 체험판 유지 시에는 삭제 접근이 불가하며, 기간이 종료되면 삭제하지 않아도 차단이 되지 않습니다.\n\t\t\t\t기간 종료 후에는 삭제 가능하며, 종료 전  삭제 시 에는 고객센터 연락주시기 바랍니다.(1661-9951)\n4. 유료 라이선스로 변경하실 경우는 [ 유료 라이선스 전환 ] 버튼을 클릭하세요.</string>
    <string name="block_example">&lt; 차단항목 예시 &gt; 사이트: xvideo.com  |  앱: 야톡 앱  |  확장자: PDF 파일</string>
    <string name="name_mandatory">이름(필수)</string>
    <string name="insert_name">이름을 입력해 주세요</string>
    <string name="school_mandatory">학교(필수)</string>
    <string name="area_mandatory">지역(필수)</string>
    <string name="email_optional">E-mail(필수)</string>
    <string name="contact_optional">연락처(필수)</string>
    <string name="question_type">문의 항목</string>
    <string name="question_content">문의 내용</string>
    <string name="question_hint">문의 내용을 입력해 주세요.</string>
    <string name="school_type_1">학교</string>
    <string name="school_type_2">미취학,기타</string>
    <string name="hint_name">이름을 입력해 주세요</string>
    <string name="hint_agency">기관명을 입력해 주세요</string>
    <string name="agreement">약관에 동의함(필수)</string>
    <string name="show_all">전체보기</string>
    <string name="no_result">검색 결과가 없습니다.</string>
    <string name="insert_school_name">학교를 입력하세요.</string>
    <string name="need_agreement">약관에 동의해주세요.</string>
    <string name="need_all_data">입력되지 않은 항목이 있습니다.</string>
    <string name="question_is_sent">문의사항이 접수되었습니다.</string>
    <string name="plz_select">선택하세요.</string>
    <string name="banner_1">유료 라이선스 전환을 희망하시는 경우 조달청 나라장터를 통해 구매 할 수 있습니다.</string>
    <string name="banner_2">※ 나라장터 종합쇼핑몰에서 ‘맘아이 스마트‘를 검색하여 제품 상세 내용을 확인할 수 있습니다.</string>
    <string name="banner_3">※ 학부모 사용자의 경우 유료 라이선스 전환을 희망할 시 해당 학교로 문의주세요.</string>
    <string name="banner_4">※ 문의전화 02-1661-9951 (평일 9시 30분 ~ 평일 오후 6시)</string>
    <string name="ask_customer_center">맘아이 고객센터 문의하기</string>
    <string name="shop_mall">나라장터 종합쇼핑몰로 이동하기</string>
    <string name="expiration">사용 종료일 : yyyy년MM월dd일</string>
    <string name="serial_number">일련번호 : %s</string>
    <string name="want_to_finish_demo">체험판 사용을 종료하시겠습니까?</string>
    <string name="change_license">유료 라이선스 전환</string>
    <string name="finish_demo">체험판 종료</string>
    <string name="choose_school">학교 선택</string>
    <string name="mom_i_policy">맘아이 스마트(태블릿) 이용약관</string>
</resources>