<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="82dp"
            android:paddingBottom="50dp"
            android:paddingHorizontal="40dp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="23.8sp"
                android:textColor="@color/black"
                android:text="@string/want_to_finish_demo"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFinish"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/round_marine_blue_25"
                android:text="@string/finish_demo"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@id/btnFinish"
                app:layout_constraintTop_toBottomOf="@id/tvMessage"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toEndOf="@id/btnFinish"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/round_very_light_blue_25"
                android:text="@string/cancel"
                android:layout_marginStart="40dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/tvMessage"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>