<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sunflower">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="58dp"
            android:src="@drawable/bi"/>

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="42.5sp"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:text="@string/splash_app_name"
            app:layout_constraintTop_toBottomOf="@id/ivBi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/tvDataWillBeUsed"
            />

        <TextView
            android:id="@+id/tvDataWillBeUsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="17.8sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintBottom_toTopOf="@id/tvCopyRights"
            android:gravity="center_horizontal"
            android:text="@string/data_will_be_used"/>

        <TextView
            android:id="@+id/tvCopyRights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="10sp"
            android:textColor="#313131"
            android:lineSpacingExtra="40.3sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@id/tvDataWillBeUsed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/copy_rights"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>