<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sunflower">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="58dp"
            android:src="@drawable/bi"/>

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="23sp"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:text="@string/insert_license"
            app:layout_constraintTop_toBottomOf="@id/ivBi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/etLicense"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLicense"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingVertical="8dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:hint="@string/plz_insert_license"
            android:textColor="@color/black"
            android:textSize="22.5sp"
            android:inputType="textCapCharacters"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@id/btnConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="33dp"
            android:background="@drawable/round_green_brown_25"
            app:layout_constraintTop_toBottomOf="@id/etLicense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/confirm"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTrial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="22dp"
            android:text="@string/trial_version"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:background="@drawable/round_marine_blue_25"/>

        <TextView
            android:id="@+id/tvDeviceUUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/black_2"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>